@@ -1,3 +1,8 @@
+2012-12-25  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-parse-records): If multiple records have the
+	same name, hash all these records.
+	(bbdb-allow-duplicates): Doc fix.
+
 2012-09-23  Roland Winkler  <winkler@gnu.org>
 	Add more complete support for mail entries containing RFC-822
 	addresses such as "John Smith <smith@foo.com>" in the record of
